Fix wrapping for port forwarding multiedit fields in FF

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -7619,10 +7619,10 @@ div.container div.panel div#details-tab-addloadBalancer.detail-group div.loadBal
 }
 
 .multi-edit .range input {
-  width: 41px;
-  margin-left: 13px;
+  width: 35px;
+  margin-left: 6px;
+  margin-right: 2px;
   position: relative;
-  float: left;
 }
 
 .multi-edit .range label {
